--- a/catalog.html
+++ b/catalog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
 
 <head>
   <meta charset="utf-8">
@@ -9,155 +9,167 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body class="page-body">
 
-  <header class="header">
-    <a href="index.html" class="header__logo"><img src="img/header/logo-device.svg" width="163" height="35" alt="Device"></a>
 
-    <form action="https://echo.htmlacademy.ru" method="get" class="header-search">
-      <label for="search-field">Поиск по сайту</label>
-      <input type="text" name="search" id="search-field">
-      <button type="submit" class="header-search__button ">Найти</button>
-    </form>
+  <header class="container header">
+    <div class="header__wrapper">
+      <a href="index.html" class="header__logo"><img src="img/header/logo-device.svg" width="163" height="35"
+          alt="Device"></a>
+      <div class="grid-row">
+        <form class="col-3" action="https://echo.htmlacademy.ru" method="get" class="header-search">
+          <label for="search-field">Поиск по сайту</label>
+          <input type="text" name="search" id="search-field">
+          <button type="submit" class="header-search__button ">Найти</button>
+        </form>
 
-    <ul class="basic-list header-actions">
-      <li class="header-actions__item">
-        <a href="#" class="basic-link basic-link_icon basic-link_icon_signin">Валентин
-          Петухов</a>
-        <a href="#" class="basic-link basic-link_signout">Выйти</a>
-      </li>
-      <li class="header-actions__item">
-        <a href="#" class="basic-link basic-link_icon basic-link_icon_compare">Сравнить</a>
-      </li>
-      <li class="header-actions__item">
-        <a href="#" class="basic-link basic-link_icon basic-link_icon_basket">Корзина</a>
-      </li>
-    </ul>
-    <!-- .header-actions -->
+        <ul class="basic-list col-3 grid-row  header-actions">
+          <li class="col-3 header-actions__item">
+            <a href="#" class="basic-link basic-link_icon basic-link_icon_signin">Валентин
+              Петухов</a>
+            <a href="#" class="basic-link basic-link_signout">Выйти</a>
+          </li>
+          <li class="col-2 header-actions__item">
+            <a href="#" class="basic-link basic-link_icon basic-link_icon_compare">Сравнить</a>
+          </li>
+          <li class="col-2 header-actions__item">
+            <a href="#" class="basic-link basic-link_icon basic-link_icon_basket">Корзина</a>
+          </li>
+        </ul>
+        <!-- .header-actions -->
+      </div>
 
-    <nav class="header-nav">
-      <ul class="basic-list">
-        <li>
-          <a href="#" class="basic-link header-nav__link">Каталог товаров</a>
-          <ul class="basic-list header-catalog">
-            <li class="header-catalog__item"><a href="#" class="basic-link">Виртуальная реальность</a></li>
-            <li class="header-catalog__item"><a class="basic-link">Моноподы для селфи</a></li>
-            <li class="header-catalog__item"><a href="#" class="basic-link">Экшн-камеры</a></li>
-            <li class="header-catalog__item"><a href="#" class="basic-link">Фитнес-браслеты</a></li>
-            <li class="header-catalog__item"><a href="#" class="basic-link">Умные часы</a></li>
-            <li class="header-catalog__item"><a href="#" class="basic-link">Квадрокоптер</a></li>
+
+      <nav class="header-nav">
+        <ul class="basic-list grid-row">
+          <li class="col-3">
+            <a href="#" class="basic-link header-nav__link">Каталог товаров</a>
+            <ul class="basic-list header-catalog">
+              <li class="header-catalog__item"><a href="#" class="basic-link">Виртуальная реальность</a></li>
+              <li class="header-catalog__item"><a class="basic-link">Моноподы для селфи</a></li>
+              <li class="header-catalog__item"><a href="#" class="basic-link">Экшн-камеры</a></li>
+              <li class="header-catalog__item"><a href="#" class="basic-link">Фитнес-браслеты</a></li>
+              <li class="header-catalog__item"><a href="#" class="basic-link">Умные часы</a></li>
+              <li class="header-catalog__item"><a href="#" class="basic-link">Квадрокоптер</a></li>
+            </ul>
+          </li>
+          <ul class="basic-list col-3 grid-row">
+            <li class="col-2">
+              <a href="#" class="basic-link header-nav__link">Доставка</a>
+            </li>
+            <li class="col-2">
+              <a href="#" class="basic-link header-nav__link">Гарантия</a>
+            </li>
+            <li class="col-3">
+              <a href="#" class="basic-link header-nav__link">Контакты</a>
+            </li>
           </ul>
-        </li>
-        <li>
-          <a href="#" class="basic-link header-nav__link">Доставка</a>
-        </li>
-        <li>
-          <a href="#" class="basic-link header-nav__link">Гарантия</a>
-        </li>
-        <li>
-          <a href="#" class="basic-link header-nav__link">Контакты</a>
-        </li>
-      </ul>
-    </nav>
-    <!-- /.heaver-nav -->
+        </ul>
+      </nav>
+      <!-- /.heaver-nav -->
+    </div>
   </header>
   <!-- /.header -->
+
+
   <main class="main">
-    <h1 class="basic-title">Моноподы для селфи</h1>
+    <h1 class="container basic-title">Моноподы для селфи</h1>
 
-    <ul class="basic-list breadcrumbs">
-      <li><a href="#" class="breadcrumbs__item">Главная</a></li>
-      <li><a href="#" class="breadcrumbs__item">Каталог товаров</a></li>
-      <li><a class="breadcrumbs__item breadcrumbs__item_active">Моноподы для селфи</a></li>
-    </ul>
+    <div class="container">
+      <ul class="basic-list breadcrumbs">
+        <li><a href="#" class="breadcrumbs__item">Главная</a></li>
+        <li><a href="#" class="breadcrumbs__item">Каталог товаров</a></li>
+        <li><a class="breadcrumbs__item breadcrumbs__item_active">Моноподы для селфи</a></li>
+      </ul>
+    </div>
 
-    <section class="filter">
-      <h2 class="filter__title">Фильтр:</h2>
+    <div class="grid">
+      <section class="filter">
+        <h2 class="filter__title">Фильтр:</h2>
 
-      <form action="https://echo.htmlacademy.ru" method="get" class="filter__form">
-        <fieldset class="filter__item">
-          <p class="filter__text">
-            Стоимость
-          </p>
-          <div class="filter-price">
-            <div class="filter-price__range">
-              <div class="filter-price__scale">
-                <div class="filter-price__bar"></div>
-                <div class="filter-price__toggle filter-price__toggle_min" tabindex="0"></div>
-                <div class="filter-price__toggle filter-price__toggle_max" tabindex="0"></div>
+        <form action="https://echo.htmlacademy.ru" method="get" class="filter__form">
+          <fieldset class="filter__item">
+            <p class="filter__text">
+              Стоимость
+            </p>
+            <div class="filter-price">
+              <div class="filter-price__range">
+                <div class="filter-price__scale">
+                  <div class="filter-price__bar"></div>
+                  <div class="filter-price__toggle filter-price__toggle_min" tabindex="0"></div>
+                  <div class="filter-price__toggle filter-price__toggle_max" tabindex="0"></div>
+                </div>
               </div>
-            </div>
-  
-            <label class="visually-hidden" for="min-price">от</label>
-            <input class="filter-price__number" type="text" id="min-price" name="min-price" value="100"> ₽
-  
-            <label class="visually-hidden" for="max-price">до</label>
-            <input class="filter-price__number" type="text" id="max-price" name="max-price" value="500"> ₽
-          </div>
-        </fieldset>
+
+              <label class="visually-hidden" for="min-price">от</label>
+              <input class="filter-price__number" type="text" id="min-price" name="min-price" value="100"> ₽
+
+              <label class="visually-hidden" for="max-price">до</label>
+              <input class="filter-price__number" type="text" id="max-price" name="max-price" value="500"> ₽
+          </fieldset>
 
 
-        <fieldset class="filter__item">
-          <label class="filter__text">
-            Цвет
-          </label>
-          <ul class="basic-list filter__list">
-            <li>
-              <input class="visually-hidden filter__input" type="checkbox" name="black" id="black-field" checked>
-              <label class="filter__label filter__label_checkbox" for="black-field">
-                Чёрный
-              </label>
-            </li>
-            <li>
-              <input class="visually-hidden filter__input" type="checkbox" name="white" id="white-field">
-              <label class="filter__label filter__label_checkbox" for="white-field">
-                Белый
-              </label>
-            </li>
-            <li>
-              <input class="visually-hidden filter__input" type="checkbox" name="blue" id="blue-field" checked>
-              <label class="filter__label filter__label_checkbox" for="blue-field">
-                Синий
-              </label>
-            </li>
-            <li>
-              <input class="visually-hidden filter__input" type="checkbox" name="red" id="red-field" checked>
-              <label class="filter__label filter__label_checkbox" for="red-field">
-                Красный
-              </label>
-            </li>
-            <li>
-              <input class="visually-hidden filter__input" type="checkbox" name="pink" id="pink-field">
-              <label class="filter__label filter__label_checkbox" for="pink-field">
-                Розовый
-              </label>
-            </li>
-          </ul>
-        </fieldset>
+          <fieldset class="filter__item">
+            <label class="filter__text">
+              Цвет
+            </label>
+            <ul class="basic-list filter__list">
+              <li>
+                <input class="visually-hidden filter__input" type="checkbox" name="black" id="black-field" checked>
+                <label class="filter__label filter__label_checkbox" for="black-field">
+                  Чёрный
+                </label>
+              </li>
+              <li>
+                <input class="visually-hidden filter__input" type="checkbox" name="white" id="white-field">
+                <label class="filter__label filter__label_checkbox" for="white-field">
+                  Белый
+                </label>
+              </li>
+              <li>
+                <input class="visually-hidden filter__input" type="checkbox" name="blue" id="blue-field" checked>
+                <label class="filter__label filter__label_checkbox" for="blue-field">
+                  Синий
+                </label>
+              </li>
+              <li>
+                <input class="visually-hidden filter__input" type="checkbox" name="red" id="red-field" checked>
+                <label class="filter__label filter__label_checkbox" for="red-field">
+                  Красный
+                </label>
+              </li>
+              <li>
+                <input class="visually-hidden filter__input" type="checkbox" name="pink" id="pink-field">
+                <label class="filter__label filter__label_checkbox" for="pink-field">
+                  Розовый
+                </label>
+              </li>
+            </ul>
+          </fieldset>
 
-        <fieldset class="filter__item">
-          <label class="filter__text">
+          <fieldset class="filter__item">
+            <label class="filter__text">
               Bluetooth
-          </label>
-          <ul class="basic-list filter__list">
-            <li>
-              <input class="visually-hidden filter__input" type="radio" name="filter-bluetooth" value="1"
-                id="filter-yes" checked>
-              <label class="filter__label filter__label_radio" for="filter-yes">
-                Есть
-              </label>
-            </li>
-            <li>
-              <input class="visually-hidden filter__input" type="radio" name="filter-bluetooth" value="0"
-                id="filter-no">
-              <label class="filter__label filter__label_radio" for="filter-no">
-                Нет
-              </label>
-            </li>
-          </ul>
-        </fieldset>
-        <button type="submit" class="button">Показать</button>
-      </form>
+            </label>
+            <ul class="basic-list filter__list">
+              <li>
+                <input class="visually-hidden filter__input" type="radio" name="filter-bluetooth" value="1"
+                  id="filter-yes" checked>
+                <label class="filter__label filter__label_radio" for="filter-yes">
+                  Есть
+                </label>
+              </li>
+              <li>
+                <input class="visually-hidden filter__input" type="radio" name="filter-bluetooth" value="0"
+                  id="filter-no">
+                <label class="filter__label filter__label_radio" for="filter-no">
+                  Нет
+                </label>
+              </li>
+            </ul>
+          </fieldset>
+          <button type="submit" class="button">Показать</button>
+        </form>
     </section>
     <!-- /.filter -->
 
@@ -172,8 +184,8 @@
         </ul>
       </section>
 
-      <ul class="basic-list catalog__list">
-        <li class="catalog__item">
+      <ul class="basic-list grid-row catalog__list">
+        <li class="col-3 catalog__item">
           <img class="catalog__img" src="img/catalog/item-1.jpg" width="360" height="380" alt="Фото товара">
           <a href="#" class="catalog__text">
             Любительская селфи-палка
@@ -184,7 +196,7 @@
           <a href="#" class="button catalog__button">В корзину</a>
           <a href="#" class="catalog__link">Добавить к сравнению</a>
         </li>
-        <li class="catalog__item">
+        <li class="col-3 catalog__item">
           <img class="catalog__img" src="img/catalog/item-2.jpg" width="360" height="380" alt="Фото товара">
           <a href="#" class="catalog__text">
             Профессиональная селфи-палка
@@ -195,7 +207,7 @@
           <a href="#" class="button catalog__button">В корзину</a>
           <a href="#" class="catalog__link">Добавить к сравнению</a>
         </li>
-        <li class="catalog__item">
+        <li class="col-3 catalog__item">
           <img class="catalog__img" src="img/catalog/item-3.jpg" width="360" height="380" alt="Фото товара">
           <a href="#" class="catalog__text">
             Непотопляемая селфи-палка
@@ -206,7 +218,7 @@
           <a href="#" class="button catalog__button">В корзину</a>
           <a href="#" class="catalog__link">Добавить к сравнению</a>
         </li>
-        <li class="catalog__item">
+        <li class="col-3 catalog__item">
           <img class="catalog__img" src="img/catalog/item-4.jpg" width="360" height="380" alt="Фото товара">
           <a href="#" class="catalog__text">
             Селфи-палка «Следуй за мной»
@@ -230,53 +242,60 @@
       </section>
     </section>
     <!-- /.catalog -->
+    </div>
   </main>
   <!-- .main -->
 
-  <footer class="footer">
-    <a href="index.html" class="footer__logo"><img src="img/footer/logo.svg" width="163" height="35" alt="Device"></a>
+  <footer class="container footer">
+    <div class="grid-row">
+      <a class="col-3 footer__logo"><img src="img/footer/logo.svg" width="163" height="35" alt="Device"></a>
 
-    <ul class="basic-list footer-actions">
-      <li class="footer-actions__item">
-        <a href="#" class="basic-link basic-link_theme_dark basic-link_icon basic-link_icon_name">Валентин Петухов</a>
-        <a href="#" class="basic-link basic-link_theme_dark basic-link_signout">Выйти</a>
-      </li>
-      <li class="footer-actions__item">
-        <a href="#" class="basic-link basic-link_theme_dark basic-link_icon basic-link_icon_compare">Сравнить</a>
-      </li>
-      <li class="footer-actions__item">
-        <a href="#" class="basic-link basic-link_theme_dark basic-link_icon basic-link_icon_basket">Корзина</a>
-      </li>
-    </ul>
+      <ul class="basic-list col-3 footer-actions">
+        <li class="footer-actions__item">
+          <a href="#" class="basic-link basic-link_theme_dark basic-link_icon  basic-link_icon_signin">Войти</a>
+          <a href="#" class="basic-link basic-link_theme_dark basic-link_icon basic-link_icon_name">Валентин Петухов</a>
+        </li>
+        <li class="footer-actions__item">
+          <a href="#" class="basic-link basic-link_theme_dark basic-link_icon  basic-link_icon_compare">Сравнить</a>
+        </li>
+        <li class="footer-actions__item">
+          <a href="#" class="basic-link basic-link_theme_dark basic-link_icon  basic-link_icon_basket">Корзина</a>
+        </li>
+      </ul>
+    </div>
 
-    <address class="footer__address">г. Москва, ул. Строителей, 15</address>
+    <div class="grid-row">
+      <address class="col-2 footer__address">г. Москва, ул. Строителей, 15</address>
 
-    <ul class="basic-list footer-nav">
-      <li>
-        <a href="#" class="basic-link basic-link_theme_dark footer-nav__link">Доставка</a>
-      </li>
-      <li>
-        <a href="#" class="basic-link basic-link_theme_dark footer-nav__link">Гарантия</a>
-      </li>
-      <li>
-        <a href="#" class="basic-link basic-link_theme_dark footer-nav__link">Контакты</a>
-      </li>
-    </ul>
+      <ul class="basic-list col-3 footer-nav">
+        <li>
+          <a href="#" class="basic-link basic-link_theme_dark footer-nav__link">Доставка</a>
+        </li>
+        <li>
+          <a href="#" class="basic-link basic-link_theme_dark footer-nav__link">Гарантия</a>
+        </li>
+        <li>
+          <a href="#" class="basic-link basic-link_theme_dark footer-nav__link">Контакты</a>
+        </li>
+      </ul>
 
-    <p class="footer-tel">Тел.: <a class="footer-tel__link" href="tel:+74954959595">+7 (495) 495-95-95</a></p>
+      <p class="col-2 footer-tel">Тел.: <a class="footer-tel__link" href="tel:+74954959595">+7 (495) 495-95-95</a></p>
+    </div>
 
-    <ul class="basic-list footer-socials">
-      <li><a href="#" class="footer-socials__link"><span class="visually-hidden">Facebook</span></a></li>
-      <li><a href="#" class="footer-socials__link"><span class="visually-hidden">Instagram</span></a></li>
-      <li><a href="#" class="footer-socials__link"><span class="visually-hidden">Twitter</span></a></li>
-    </ul>
+    <div class="grid-row">
+      <div class="col-2"></div>
+      <ul class="basic-list col-3 footer-socials">
+        <li><a href="#" class="footer-socials__link"><span class="visually-hidden">Facebook</span></a></li>
+        <li><a href="#" class="footer-socials__link"><span class="visually-hidden">Instagram</span></a></li>
+        <li><a href="#" class="footer-socials__link"><span class="visually-hidden">Twitter</span></a></li>
+      </ul>
 
-    <a href="https://htmlacademy.ru/intensive/htmlcss" class="footer__copyright">
-      <img src="img/footer/logo-html.svg" width="27" height="34" alt="Html Academy">
-    </a>
-
+      <a href=" https://htmlacademy.ru/intensive/htmlcss" class="col-2 footer__copyright">
+        <img src="img/footer/logo-html.svg" width="27" height="34" alt="Html Academy">
+      </a>
+    </div>
   </footer>
-
+  <!-- footer -->
 
 </body>
 
